engine/crates/parser-sdl/src/snapshots/parser_sdl__tests__test_experimental-sdl.snap
---
source: crates/parser-sdl/src/tests.rs
expression: sdl
---
type Query {
}
schema {
	query: Query
}

